--- a/index.html
+++ b/index.html
@@ -4,68 +4,82 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студия</title>
+    <title>jane Студия</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!-- _______________ Header _______________ -->
-    <header>
-      <!-- _______________ Logo _______________ -->
-      <a href="./index.html" class="logo" lang="en"><span class="logo-part">Web</span>Studio</a>
+    <header class="page-header">
+      <div class="container header-box">
+        <!-- _______________ Logo _______________ -->
+        <a href="./index.html" class="logo" lang="en"><span class="logo-part">Web</span>Studio</a>
 
-      <nav>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="site-nav-link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
-          <li><a href="" class="site-nav-link">Контакты</a></li>
+        <nav class="site-nav">
+          <ul class="site-nav-list list">
+            <li class="site-nav-item">
+              <a href="./index.html" class="site-nav-link current">Студия</a>
+            </li>
+            <li class="site-nav-item">
+              <a href="./portfolio.html" class="site-nav-link">Портфолио</a>
+            </li>
+            <li class="site-nav-item"><a href="" class="site-nav-link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="contacts-nav list">
+          <li class="contacts-nav-item">
+            <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
+          </li>
+          <li class="contacts-nav-item">
+            <a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-
-      <ul class="contacts-nav list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a>
-        </li>
-        <li><a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <!-- _______________ Hero _______________ -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button">Заказать услугу</button>
+        <div class="container hero-box">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- _______________ Features _______________ -->
-      <section class="section">
-        <h2 class="section-title">Наши преимущества</h2>
-        <ul class="features list">
-          <li>
+      <section class="section container features">
+        <h2 class="section-title visually-hidden">Наши преимущества</h2>
+        <ul class="features-list list">
+          <li class="features-item">
             <h3 class="features-title">Внимание к деталям</h3>
             <p class="features-text">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-title">Пунктуальность</h3>
             <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-title">Планирование</h3>
             <p class="features-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-title">Современные технологии</h3>
             <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -75,24 +89,24 @@
       </section>
 
       <!-- _______________ Our doings _______________ -->
-      <section class="section">
+      <section class="section container">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
+        <ul class="doings list">
+          <li class="doings-item">
             <img
               src="./images/box1.jpg"
               alt="Создаем эффективные сайты, используя современные технологии в разработке"
               width="370"
             />
           </li>
-          <li>
+          <li class="doings-item">
             <img
               src="./images/box2.jpg"
               alt="Ориентируемся на целевую аудиторию, учитывая все тебования заказчика"
               width="370"
             />
           </li>
-          <li>
+          <li class="doings-item">
             <img
               src="./images/box3.jpg"
               alt="Предлагаем дизайн, подбирая правильную цветовую гамму"
@@ -104,50 +118,69 @@
 
       <!-- _______________ Our team _______________ -->
       <section class="team section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/teamcard1.jpg" alt="Фото Игоря" width="270" />
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p class="team-text" lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/teamcard2.jpg" alt="Фото Ольги" width="270" />
-            <h3 class="team-title">Ольга Репина</h3>
-            <p class="team-text" lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/teamcard3.jpg" alt="Фото Николая" width="270" />
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p class="team-text" lang="en">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/teamcard4.jpg" alt="Фото Михаила" width="270" />
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p class="team-text" lang="en">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img src="./images/teamcard1.jpg" alt="Фото Игоря" width="270" class="team-img" />
+              <div class="team-content">
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p class="team-text" lang="en">Product Designer</p>
+              </div>
+            </li>
+
+            <li class="team-item">
+              <img src="./images/teamcard2.jpg" alt="Фото Ольги" width="270" />
+              <div class="team-content">
+                <h3 class="team-title">Ольга Репина</h3>
+                <p class="team-text" lang="en">Frontend Developer</p>
+              </div>
+            </li>
+
+            <li class="team-item">
+              <img src="./images/teamcard3.jpg" alt="Фото Николая" width="270" />
+              <div class="team-content">
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p class="team-text" lang="en">Marketing</p>
+              </div>
+            </li>
+
+            <li class="team-item">
+              <img src="./images/teamcard4.jpg" alt="Фото Михаила" width="270" />
+              <div class="team-content">
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p class="team-text" lang="en">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--  _______________ Footer _______________ -->
     <footer class="footer">
-      <a href="./index.html" class="logo dark" lang="en"
-        ><span class="logo-part">Web</span>Studio</a
-      >
-      <address>
-        <ul class="address list">
-          <li>
-            <a href="https://www.google.com.ua/maps/@50.4265841,30.5361971,17z" class="address-map"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-contact">info@devstudio.com</a>
-          </li>
-          <li><a href="tel:+380961111111" class="address-contact">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo dark" lang="en"
+          ><span class="logo-part">Web</span>Studio</a
+        >
+        <address>
+          <ul class="address list">
+            <li class="address-item">
+              <a
+                href="https://www.google.com.ua/maps/@50.4265841,30.5361971,17z"
+                class="address-map"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-contact">info@devstudio.com</a>
+            </li>
+            <li class="address-item">
+              <a href="tel:+380961111111" class="address-contact">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
