Corrections after verification
- Generally margin-top to margin-bottom
- div container always in each section separately
- no padding-left-right for links

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jane Портфолио</title>
+    <title>Портфолио</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -48,92 +48,94 @@
     </header>
 
     <main>
-      <section class="portfolio container">
-        <h1 class="visually-hidden">Портфолио</h1>
+      <section class="section">
+        <div class="container">
+          <h1 class="visually-hidden">Портфолио</h1>
 
-        <!-- _______________ Filtr _______________ -->
-        <ul class="filtr list">
-          <li class="filtr-item"><button class="filtr-btn" type="button">Все</button></li>
-          <li class="filtr-item"><button class="filtr-btn" type="button">Веб-сайты</button></li>
-          <li class="filtr-item"><button class="filtr-btn" type="button">Приложения</button></li>
-          <li class="filtr-item"><button class="filtr-btn" type="button">Дизайн</button></li>
-          <li class="filtr-item"><button class="filtr-btn" type="button">Маркетинг</button></li>
-        </ul>
+          <!-- _______________ Filtr _______________ -->
+          <ul class="filtr list">
+            <li class="filtr-item"><button class="filtr-btn" type="button">Все</button></li>
+            <li class="filtr-item"><button class="filtr-btn" type="button">Веб-сайты</button></li>
+            <li class="filtr-item"><button class="filtr-btn" type="button">Приложения</button></li>
+            <li class="filtr-item"><button class="filtr-btn" type="button">Дизайн</button></li>
+            <li class="filtr-item"><button class="filtr-btn" type="button">Маркетинг</button></li>
+          </ul>
 
-        <!-- _______________ Examples _______________ -->
-        <ul class="examples list">
-          <li class="examples-item">
-            <img src="./images/project1.jpg" alt="" width="370" />
-            <div class="examples-content">
-              <h2 class="examples-title">Технокряк</h2>
-              <p class="examples-type">Веб-сайт</p>
-            </div>
-          </li>
+          <!-- _______________ Examples _______________ -->
+          <ul class="examples list">
+            <li class="examples-item">
+              <img src="./images/project1.jpg" alt="" width="370" />
+              <div class="examples-content">
+                <h2 class="examples-title">Технокряк</h2>
+                <p class="examples-type">Веб-сайт</p>
+              </div>
+            </li>
 
-          <li class="examples-item">
-            <img src="./images/project2.jpg" alt="" width="370" />
-            <div class="examples-content">
-              <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
-              <p class="examples-type">Дизайн</p>
-            </div>
-          </li>
+            <li class="examples-item">
+              <img src="./images/project2.jpg" alt="" width="370" />
+              <div class="examples-content">
+                <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
+                <p class="examples-type">Дизайн</p>
+              </div>
+            </li>
 
-          <li class="examples-item">
-            <img src="./images/project3.jpg" alt="" width="370" />
-            <div class="examples-content">
-              <h2 class="examples-title">Ресторан Seafood</h2>
-              <p class="examples-type">Приложение</p>
-            </div>
-          </li>
+            <li class="examples-item">
+              <img src="./images/project3.jpg" alt="" width="370" />
+              <div class="examples-content">
+                <h2 class="examples-title">Ресторан Seafood</h2>
+                <p class="examples-type">Приложение</p>
+              </div>
+            </li>
 
-          <li class="examples-item">
-            <img src="./images/project4.jpg" alt="" width="370" />
-            <div class="examples-content">
-              <h2 class="examples-title">Проект Prime</h2>
-              <p class="examples-type">Маркетинг</p>
-            </div>
-          </li>
+            <li class="examples-item">
+              <img src="./images/project4.jpg" alt="" width="370" />
+              <div class="examples-content">
+                <h2 class="examples-title">Проект Prime</h2>
+                <p class="examples-type">Маркетинг</p>
+              </div>
+            </li>
 
-          <li class="examples-item">
-            <img src="./images/project5.jpg" alt="" width="370" />
-            <div class="examples-content">
-              <h2 class="examples-title">Проект Boxes</h2>
-              <p class="examples-type">Приложение</p>
-            </div>
-          </li>
+            <li class="examples-item">
+              <img src="./images/project5.jpg" alt="" width="370" />
+              <div class="examples-content">
+                <h2 class="examples-title">Проект Boxes</h2>
+                <p class="examples-type">Приложение</p>
+              </div>
+            </li>
 
-          <li class="examples-item">
-            <img src="./images/project6.jpg" alt="" width="370" />
-            <div class="examples-content">
-              <h2 class="examples-title">Inspiration has no Borders</h2>
-              <p class="examples-type">Веб-сайт</p>
-            </div>
-          </li>
+            <li class="examples-item">
+              <img src="./images/project6.jpg" alt="" width="370" />
+              <div class="examples-content">
+                <h2 class="examples-title">Inspiration has no Borders</h2>
+                <p class="examples-type">Веб-сайт</p>
+              </div>
+            </li>
 
-          <li class="examples-item">
-            <img src="./images/project7.jpg" alt="" width="370" />
-            <div class="examples-content">
-              <h2 class="examples-title">Издание Limited Edition</h2>
-              <p class="examples-type">Дизайн</p>
-            </div>
-          </li>
+            <li class="examples-item">
+              <img src="./images/project7.jpg" alt="" width="370" />
+              <div class="examples-content">
+                <h2 class="examples-title">Издание Limited Edition</h2>
+                <p class="examples-type">Дизайн</p>
+              </div>
+            </li>
 
-          <li class="examples-item">
-            <img src="./images/project8.jpg" alt="" width="370" />
-            <div class="examples-content">
-              <h2 class="examples-title">Проект LAB</h2>
-              <p class="examples-type">Маркетинг</p>
-            </div>
-          </li>
+            <li class="examples-item">
+              <img src="./images/project8.jpg" alt="" width="370" />
+              <div class="examples-content">
+                <h2 class="examples-title">Проект LAB</h2>
+                <p class="examples-type">Маркетинг</p>
+              </div>
+            </li>
 
-          <li class="examples-item">
-            <img src="./images/project9.jpg" alt="" width="370" />
-            <div class="examples-content">
-              <h2 class="examples-title">Growing Business</h2>
-              <p class="examples-type">Приложение</p>
-            </div>
-          </li>
-        </ul>
+            <li class="examples-item">
+              <img src="./images/project9.jpg" alt="" width="370" />
+              <div class="examples-content">
+                <h2 class="examples-title">Growing Business</h2>
+                <p class="examples-type">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
