--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jane Студия</title>
+    <title>Студия</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -51,69 +51,73 @@
     <main>
       <!-- _______________ Hero _______________ -->
       <section class="hero">
-        <div class="container hero-box">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
           <button class="hero-btn" type="button">Заказать услугу</button>
         </div>
       </section>
 
       <!-- _______________ Features _______________ -->
-      <section class="section container features">
-        <h2 class="section-title visually-hidden">Наши преимущества</h2>
-        <ul class="features-list list">
-          <li class="features-item">
-            <h3 class="features-title">Внимание к деталям</h3>
-            <p class="features-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Пунктуальность</h3>
-            <p class="features-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Планирование</h3>
-            <p class="features-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-title">Современные технологии</h3>
-            <p class="features-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title visually-hidden">Наши преимущества</h2>
+          <ul class="features-list list">
+            <li class="features-item">
+              <h3 class="features-title">Внимание к деталям</h3>
+              <p class="features-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Пунктуальность</h3>
+              <p class="features-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Планирование</h3>
+              <p class="features-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Современные технологии</h3>
+              <p class="features-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- _______________ Our doings _______________ -->
-      <section class="section container">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="doings list">
-          <li class="doings-item">
-            <img
-              src="./images/box1.jpg"
-              alt="Создаем эффективные сайты, используя современные технологии в разработке"
-              width="370"
-            />
-          </li>
-          <li class="doings-item">
-            <img
-              src="./images/box2.jpg"
-              alt="Ориентируемся на целевую аудиторию, учитывая все тебования заказчика"
-              width="370"
-            />
-          </li>
-          <li class="doings-item">
-            <img
-              src="./images/box3.jpg"
-              alt="Предлагаем дизайн, подбирая правильную цветовую гамму"
-              width="370"
-            />
-          </li>
-        </ul>
+      <section class="section section-doing">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="doings list">
+            <li class="doings-item">
+              <img
+                src="./images/box1.jpg"
+                alt="Создаем эффективные сайты, используя современные технологии в разработке"
+                width="370"
+              />
+            </li>
+            <li class="doings-item">
+              <img
+                src="./images/box2.jpg"
+                alt="Ориентируемся на целевую аудиторию, учитывая все тебования заказчика"
+                width="370"
+              />
+            </li>
+            <li class="doings-item">
+              <img
+                src="./images/box3.jpg"
+                alt="Предлагаем дизайн, подбирая правильную цветовую гамму"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- _______________ Our team _______________ -->
